fix team description overflow

--- a/css/team.css
+++ b/css/team.css
@@ -113,7 +113,7 @@
     }
         .team-description > p{
             padding: 15px 10px 0px 15px; 
-            line-height: 22px;
+            line-height: 21px;
         }
         .team-description strong{
             font-weight: normal;
